adding quickstart to readme

--- a/config.ini
+++ b/config.ini
@@ -1,29 +1,10 @@
-; Is it a production instance? 0 = False, 1 = True
-production = 0
-
-; internationalization support? 0 = False, 1 = True
-i18n = 1
-
-; charset of the application 
-charset = utf-8
-
-; where's the pages' code located (i.e. Controllers, maybe?)
-pages_folder = "/pages"
-
-; where's the view templates located
-views_folder = "/views"
-
-; name of the auth database
-auth_database = "auth.db"
-
-; name of the application database
-app_database = "app.db"
-
-; name of the session variable holding the user information (id, email)
-username_session = "username"
-
-; initial path of the application (in case none is specified)
-initial_path = "/home/index"
-
-; where is the code located in the server (subfolder)
-server_folder = "/anemic"
+production = 0                  ; Is it a production instance? 0 = False, 1 = True
+i18n = 1                        ; internationalization support? 0 = False, 1 = True
+charset = utf-8                 ; charset of the application 
+pages_folder = "/pages"         ; where's the pages' code located (i.e. Controllers, maybe?)
+views_folder = "/views"         ; where's the view templates located
+auth_database = "auth.db"       ; name of the auth database
+app_database = "app.db"         ; name of the application database
+username_session = "username"   ; name of the session variable holding the user information (id, email)
+initial_path = "/home/index"    ; initial path of the application (in case none is specified)
+server_folder = "/anemic"       ; where is the code located in the server (subfolder)
